# django-template

./: .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  settings.toml
.github/: FUNDING.yml  dependabot.yml  pre-commit.yaml  requirements.txt
.github/workflows/: bootstrap_update.yml  code-quality.yml  gh.yml  pre-commit.yml  pre-commitv2.yml  release.yml  requirements.yml  upgrade-security-checks.yml
dj/assets/css/: app.css  app.rtl.css
dj/assets/css/fonts/: README.md
dj/project/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/assets/css/: extra.css
project/assets/css/: app.rtl.css
project/config/: asgi.py  settings.py  urls.py  wsgi.py
project/project/: settings.py
requirements/: dev-requirements.txt  requirements.txt
scripts/: check_pyproject_changes.sh  create-branch.sh  create_branch.py  increment_version.py  update_bootstrap.py  update_changelog.py
tests/test_scripts/: test_create_branch.py  test_increment_version.py
