[tool.poetry]
name = "django-template"
version = "0.0.6"
description = "A streamlined Django template designed for practical, real-world applications, with essential configurations and best practices integrated out of the box."
authors = ["Azat <8280770+azataiot@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-environ = "^0.11.1"
pillow = "^10.0.0"
django-allauth = "^0.55.2"
django-cors-headers = "^4.2.0"
gunicorn = "^21.2.0"
psycopg = {extras = ["binary"], version = "^3.1.11"}
pep440-utility = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.289"
requests = "^2.31.0"
pytest = "^7.4.2"
pre-commit = "^3.3.3"
django-debug-toolbar = "^4.2.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.2.6"


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ['E501']

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.isort]
profile = "black"

# pytest.ini
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
